Update: Dual Webhook + LocalAuth + Log improvements

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,14 @@ NODE_ENV=development
 # Database MySQL
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=
-DB_PASS=
+DB_USER=wrjunior
+DB_PASS=Hamas@fif13
 DB_NAME=wagateway
 
 # Webhook Integration
-N8N_WEBHOOK=http://localhost:5678/webhook/whatsapp
+N8N_WEBHOOK_TEST=https://n8n.wrjunior.my.id/webhook-test/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
+N8N_WEBHOOK_PROD=https://n8n.wrjunior.my.id/webhook/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
+WEBHOOK_TOKEN=aa2702e1-f45c-45ec-abc2-1f63919aa9d8
 
 # WhatsApp Gateway
 SESSION_NAME=wagateway
