--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ NODE_ENV=development
 # Database MySQL
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=wrjunior
-DB_PASS=Hamas@fif13
+DB_USER=root
+DB_PASS=
 DB_NAME=wagateway
 
 # Webhook Integration
