--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ DB_PASS=
 DB_NAME=wagateway
 
 # Webhook Integration
-N8N_WEBHOOK_TEST=https://n8n.wrjunior.my.id/webhook-test/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
-N8N_WEBHOOK_PROD=https://n8n.wrjunior.my.id/webhook/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
+N8N_WEBHOOK_TEST=https://n8n.server.my.id/webhook-test/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
+N8N_WEBHOOK_PROD=https://n8n.server.my.id/webhook/b25a7281-d6a2-42dd-bbc5-cebfa8ece771
 WEBHOOK_TOKEN=aa2702e1-f45c-45ec-abc2-1f63919aa9d8
 
 # WhatsApp Gateway
